# mains-frequency-counter-esp32

./: .gitignore  readme.md
src/: CMakeLists.txt  Makefile  sdkconfig
src/main/: CMakeLists.txt  app_main.c  counter.c  counter.h  gpio.c  gpio.h  network_mngr.c  network_mngr.h  sinkSender.c  sinkSender.h  sinkStruct.h  timer.c  timer.h  timesync.c  timesync.h  version.c
tools/: setVersion.sh  startBuildEnv.sh  upload.sh
