idf_component_register(SRCS "app_main.c"
                            "network_mngr.c"
                            "gpio.c"
                            "counter.c"
                            "timesync.c"
                            "sha256.c"
                            "sinkSender.c"
                            "version.c"
                    INCLUDE_DIRS ".")
